fixtures/valid/34-v1.0-minimal/input.anatomy
anatomy_version = "1.0"
tagline = "Minimal v1.0 fixture — only required fields."

[identity]
stack = "javascript"
form = "library"
domain = "demo"
function = "minimal"
fingerprint = "kh3ybxthmht0yvvskye2"

[generated]
at = 2026-05-17T14:00:00.000Z
by = "@anatomy/cli@test"
model = "none"
schema = "https://anatomy.dev/spec/1.0/schema.json"
